fix playlist overflow bug

--- a/static/css/final.css
+++ b/static/css/final.css
@@ -238,6 +238,7 @@ a {
 #QubePlaylist {
     min-width: 1200px;
     width: 100%;
+    height:100%;
     position: absolute;
 }
 #QubePlaylist .view.main .playlistColumn {
